--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
-    <title>Velra</title>
+    <link rel="shortcut icon" href="./faviconFinal.png" type="image/x-icon">
+    <title>My Society Needs</title>
+    
+    <meta name="description" content="A platform to manage society services efficiently." />
+    <meta name="keywords" content="society, services, management, efficient" />
+    <meta name="author" content="Webseeder Technologies" />
+    <meta property="og:title" content="My Society Needs" />
+    <meta property="og:description" content="A platform to manage society services efficiently." />
+    <meta property="og:image" content="./faviconFinal.png" />
+    <meta property="og:url" content="https://mysocietyneeds.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="My Society Needs" />
+    <meta name="twitter:description" content="A platform to manage society services efficiently." />
+    <meta name="twitter:image" content="./faviconFinal.png" />
   </head>
 
   <body>
