--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
    <!-- " there is no closing the dorrin this code but i want to integrate api in this code block the system designe in not working " -->
   
